# serializer version: 1
# name: test_branching_conversation_html_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en" data-theme="dark">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Branching Conversation | Polylogue</title>
      <style>
          :root {
              --bg-primary: #0a0a0c;
              --bg-secondary: #16161a;
              --bg-elevated: #1e1e24;
              --bg-code: #282c34;
              --text-primary: #f8f9fa;
              --text-secondary: #94a3b8;
              --text-muted: #6b7280;
              --accent: #6366f1;
              --accent-glow: rgba(99, 102, 241, 0.4);
              --border: #2d2d35;
              --border-subtle: #1f1f23;
              --user-bg: rgba(99, 102, 241, 0.1);
              --user-border: rgba(99, 102, 241, 0.3);
              --assistant-bg: rgba(16, 185, 129, 0.1);
              --assistant-border: rgba(16, 185, 129, 0.3);
              --system-bg: rgba(245, 158, 11, 0.1);
              --system-border: rgba(245, 158, 11, 0.3);
              --tool-bg: rgba(139, 92, 246, 0.1);
              --tool-border: rgba(139, 92, 246, 0.3);
          }
  
          [data-theme="light"] {
              --bg-primary: #ffffff;
              --bg-secondary: #f9fafb;
              --bg-elevated: #ffffff;
              --bg-code: #f6f8fa;
              --text-primary: #111827;
              --text-secondary: #4b5563;
              --text-muted: #9ca3af;
              --border: #e5e7eb;
              --border-subtle: #f3f4f6;
              --user-bg: #e3f2fd;
              --assistant-bg: #f5f5f5;
          }
  
          @media (prefers-color-scheme: light) {
              :root:not([data-theme="dark"]) {
                  --bg-primary: #ffffff;
                  --bg-secondary: #f9fafb;
                  --bg-elevated: #ffffff;
                  --bg-code: #f6f8fa;
                  --text-primary: #111827;
                  --text-secondary: #4b5563;
                  --text-muted: #9ca3af;
                  --border: #e5e7eb;
                  --border-subtle: #f3f4f6;
                  --user-bg: #e3f2fd;
                  --assistant-bg: #f5f5f5;
              }
          }
  
          * { box-sizing: border-box; margin: 0; padding: 0; }
  
          body {
              font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
              background-color: var(--bg-primary);
              color: var(--text-primary);
              line-height: 1.7;
              -webkit-font-smoothing: antialiased;
          }
  
          .nav-header {
              position: sticky;
              top: 0;
              background: var(--bg-secondary);
              border-bottom: 1px solid var(--border);
              padding: 1rem 2rem;
              display: flex;
              align-items: center;
              gap: 1rem;
              z-index: 100;
          }
  
          .nav-back {
              color: var(--accent);
              text-decoration: none;
              font-weight: 500;
          }
  
          .nav-breadcrumb {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .container {
              max-width: 900px;
              margin: 0 auto;
              padding: 2rem;
          }
  
          .conversation-header {
              margin-bottom: 3rem;
              padding-bottom: 2rem;
              border-bottom: 1px solid var(--border);
          }
  
          .conversation-header h1 {
              font-size: 2rem;
              font-weight: 700;
              margin-bottom: 1rem;
              background: linear-gradient(to right, var(--text-primary), var(--text-secondary));
              -webkit-background-clip: text;
              -webkit-text-fill-color: transparent;
          }
  
          .conversation-meta {
              display: flex;
              align-items: center;
              gap: 1rem;
              flex-wrap: wrap;
          }
  
          .badge {
              padding: 0.25rem 0.75rem;
              border-radius: 9999px;
              font-weight: 600;
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              background: var(--bg-elevated);
              border: 1px solid var(--border);
          }
  
          .meta-item {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .messages {
              display: flex;
              flex-direction: column;
              gap: 2rem;
          }
  
          .message {
              display: flex;
              gap: 1rem;
              padding: 1.5rem;
              border-radius: 12px;
              border: 1px solid var(--border-subtle);
              transition: border-color 0.2s;
          }
  
          .message:hover { border-color: var(--border); }
          .message-user { background: var(--user-bg); border-color: var(--user-border); }
          .message-assistant { background: var(--assistant-bg); border-color: var(--assistant-border); }
          .message-system { background: var(--system-bg); border-color: var(--system-border); }
          .message-tool, .message-tool_use, .message-tool_result {
              background: var(--tool-bg);
              border-color: var(--tool-border);
          }
  
          .message-avatar {
              flex-shrink: 0;
          }
  
          .avatar-icon {
              display: flex;
              align-items: center;
              justify-content: center;
              width: 2.5rem;
              height: 2.5rem;
              border-radius: 8px;
              background: var(--bg-elevated);
              font-weight: 700;
              font-size: 0.75rem;
              color: var(--accent);
          }
  
          .message-user .avatar-icon {
              background: var(--accent);
              color: white;
          }
  
          .message-content {
              flex-grow: 1;
              min-width: 0;
          }
  
          .message-header {
              display: flex;
              align-items: center;
              gap: 1rem;
              margin-bottom: 0.5rem;
          }
  
          .role-label {
              font-size: 0.75rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--text-muted);
          }
  
          .timestamp {
              font-size: 0.75rem;
              color: var(--text-muted);
          }
  
          .message-body {
              color: var(--text-primary);
              font-size: 0.95rem;
          }
  
          .message-body p { margin-bottom: 1rem; }
          .message-body p:last-child { margin-bottom: 0; }
  
          .message-body pre {
              background: var(--bg-code);
              border: 1px solid var(--border);
              border-radius: 8px;
              padding: 1rem;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .message-body code {
              font-family: 'JetBrains Mono', 'Fira Code', Consolas, monospace;
              font-size: 0.875em;
          }
  
          .message-body p code {
              background: var(--bg-elevated);
              padding: 0.125rem 0.375rem;
              border-radius: 4px;
          }
  
          /* Pygments highlight overrides */
          .highlight {
              background: var(--bg-code) !important;
              border-radius: 8px;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .highlight pre {
              margin: 0;
              padding: 1rem;
              background: transparent !important;
              border: none;
          }
  
          /* Branch visualization */
          .branches {
              margin-top: 1rem;
              border-left: 3px solid var(--accent);
              padding-left: 1rem;
          }
  
          .branches summary {
              cursor: pointer;
              font-size: 0.8rem;
              font-weight: 600;
              color: var(--accent);
              padding: 0.25rem 0;
              user-select: none;
          }
  
          .branches summary:hover {
              color: var(--text-primary);
          }
  
          .branch-message {
              display: flex;
              gap: 1rem;
              padding: 1rem;
              margin-top: 0.75rem;
              border-radius: 8px;
              border: 1px dashed var(--border);
              opacity: 0.9;
          }
  
          .branch-label {
              font-size: 0.7rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--accent);
              margin-bottom: 0.25rem;
          }
  
          .toc {
              position: fixed;
              right: 2rem;
              top: 6rem;
              width: 200px;
              max-height: calc(100vh - 8rem);
              overflow-y: auto;
              padding: 1rem;
              background: var(--bg-secondary);
              border: 1px solid var(--border);
              border-radius: 8px;
              font-size: 0.75rem;
              display: none;
          }
  
          @media (min-width: 1200px) {
              .toc { display: block; }
          }
  
          .toc h3 {
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.1em;
              color: var(--text-muted);
              margin-bottom: 1rem;
          }
  
          .toc-list {
              list-style: none;
          }
  
          .toc-list li { margin-bottom: 0.5rem; }
  
          .toc-list a {
              color: var(--text-secondary);
              text-decoration: none;
              display: block;
              padding: 0.25rem 0;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
          }
  
          .toc-list a:hover { color: var(--text-primary); }
  
          @media (max-width: 768px) {
              .container { padding: 1rem; }
              .message { flex-direction: column; gap: 0.5rem; }
              .conversation-header h1 { font-size: 1.5rem; }
          }
  
          pre { line-height: 125%; }
  td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  .highlight .hll { background-color: #49483e }
  .highlight { background: #272822; color: #F8F8F2 }
  .highlight .c { color: #959077 } /* Comment */
  .highlight .err { color: #ED007E; background-color: #1E0010 } /* Error */
  .highlight .esc { color: #F8F8F2 } /* Escape */
  .highlight .g { color: #F8F8F2 } /* Generic */
  .highlight .k { color: #66D9EF } /* Keyword */
  .highlight .l { color: #AE81FF } /* Literal */
  .highlight .n { color: #F8F8F2 } /* Name */
  .highlight .o { color: #FF4689 } /* Operator */
  .highlight .x { color: #F8F8F2 } /* Other */
  .highlight .p { color: #F8F8F2 } /* Punctuation */
  .highlight .ch { color: #959077 } /* Comment.Hashbang */
  .highlight .cm { color: #959077 } /* Comment.Multiline */
  .highlight .cp { color: #959077 } /* Comment.Preproc */
  .highlight .cpf { color: #959077 } /* Comment.PreprocFile */
  .highlight .c1 { color: #959077 } /* Comment.Single */
  .highlight .cs { color: #959077 } /* Comment.Special */
  .highlight .gd { color: #FF4689 } /* Generic.Deleted */
  .highlight .ge { color: #F8F8F2; font-style: italic } /* Generic.Emph */
  .highlight .ges { color: #F8F8F2; font-weight: bold; font-style: italic } /* Generic.EmphStrong */
  .highlight .gr { color: #F8F8F2 } /* Generic.Error */
  .highlight .gh { color: #F8F8F2 } /* Generic.Heading */
  .highlight .gi { color: #A6E22E } /* Generic.Inserted */
  .highlight .go { color: #66D9EF } /* Generic.Output */
  .highlight .gp { color: #FF4689; font-weight: bold } /* Generic.Prompt */
  .highlight .gs { color: #F8F8F2; font-weight: bold } /* Generic.Strong */
  .highlight .gu { color: #959077 } /* Generic.Subheading */
  .highlight .gt { color: #F8F8F2 } /* Generic.Traceback */
  .highlight .kc { color: #66D9EF } /* Keyword.Constant */
  .highlight .kd { color: #66D9EF } /* Keyword.Declaration */
  .highlight .kn { color: #FF4689 } /* Keyword.Namespace */
  .highlight .kp { color: #66D9EF } /* Keyword.Pseudo */
  .highlight .kr { color: #66D9EF } /* Keyword.Reserved */
  .highlight .kt { color: #66D9EF } /* Keyword.Type */
  .highlight .ld { color: #E6DB74 } /* Literal.Date */
  .highlight .m { color: #AE81FF } /* Literal.Number */
  .highlight .s { color: #E6DB74 } /* Literal.String */
  .highlight .na { color: #A6E22E } /* Name.Attribute */
  .highlight .nb { color: #F8F8F2 } /* Name.Builtin */
  .highlight .nc { color: #A6E22E } /* Name.Class */
  .highlight .no { color: #66D9EF } /* Name.Constant */
  .highlight .nd { color: #A6E22E } /* Name.Decorator */
  .highlight .ni { color: #F8F8F2 } /* Name.Entity */
  .highlight .ne { color: #A6E22E } /* Name.Exception */
  .highlight .nf { color: #A6E22E } /* Name.Function */
  .highlight .nl { color: #F8F8F2 } /* Name.Label */
  .highlight .nn { color: #F8F8F2 } /* Name.Namespace */
  .highlight .nx { color: #A6E22E } /* Name.Other */
  .highlight .py { color: #F8F8F2 } /* Name.Property */
  .highlight .nt { color: #FF4689 } /* Name.Tag */
  .highlight .nv { color: #F8F8F2 } /* Name.Variable */
  .highlight .ow { color: #FF4689 } /* Operator.Word */
  .highlight .pm { color: #F8F8F2 } /* Punctuation.Marker */
  .highlight .w { color: #F8F8F2 } /* Text.Whitespace */
  .highlight .mb { color: #AE81FF } /* Literal.Number.Bin */
  .highlight .mf { color: #AE81FF } /* Literal.Number.Float */
  .highlight .mh { color: #AE81FF } /* Literal.Number.Hex */
  .highlight .mi { color: #AE81FF } /* Literal.Number.Integer */
  .highlight .mo { color: #AE81FF } /* Literal.Number.Oct */
  .highlight .sa { color: #E6DB74 } /* Literal.String.Affix */
  .highlight .sb { color: #E6DB74 } /* Literal.String.Backtick */
  .highlight .sc { color: #E6DB74 } /* Literal.String.Char */
  .highlight .dl { color: #E6DB74 } /* Literal.String.Delimiter */
  .highlight .sd { color: #E6DB74 } /* Literal.String.Doc */
  .highlight .s2 { color: #E6DB74 } /* Literal.String.Double */
  .highlight .se { color: #AE81FF } /* Literal.String.Escape */
  .highlight .sh { color: #E6DB74 } /* Literal.String.Heredoc */
  .highlight .si { color: #E6DB74 } /* Literal.String.Interpol */
  .highlight .sx { color: #E6DB74 } /* Literal.String.Other */
  .highlight .sr { color: #E6DB74 } /* Literal.String.Regex */
  .highlight .s1 { color: #E6DB74 } /* Literal.String.Single */
  .highlight .ss { color: #E6DB74 } /* Literal.String.Symbol */
  .highlight .bp { color: #F8F8F2 } /* Name.Builtin.Pseudo */
  .highlight .fm { color: #A6E22E } /* Name.Function.Magic */
  .highlight .vc { color: #F8F8F2 } /* Name.Variable.Class */
  .highlight .vg { color: #F8F8F2 } /* Name.Variable.Global */
  .highlight .vi { color: #F8F8F2 } /* Name.Variable.Instance */
  .highlight .vm { color: #F8F8F2 } /* Name.Variable.Magic */
  .highlight .il { color: #AE81FF } /* Literal.Number.Integer.Long */
      </style>
  </head>
  <body>
      <nav class="nav-header">
          <a href="../index.html" class="nav-back">← Back</a>
          <span class="nav-breadcrumb">chatgpt / snap-conv-01...</span>
      </nav>
  
      <main class="container">
          <header class="conversation-header">
              <h1>Branching Conversation</h1>
              <div class="conversation-meta">
                  <span class="badge">chatgpt</span>
                  <span class="meta-item">2 messages</span>
                  
              </div>
          </header>
  
          <div class="messages">
              
              <article class="message message-user" id="msg-1">
                  <div class="message-avatar">
                      <span class="avatar-icon">US</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">user</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Question</p>
  
                      </div>
                      
                  </div>
              </article>
              
              <article class="message message-assistant" id="msg-2">
                  <div class="message-avatar">
                      <span class="avatar-icon">AS</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">assistant</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Answer 1</p>
  
                      </div>
                      
                      <details class="branches">
                          <summary>1 alternative</summary>
                          
                          <div class="branch-message message-assistant">
                              <div class="message-content">
                                  <div class="branch-label">Branch 1</div>
                                  <header class="message-header">
                                      <span class="role-label">assistant</span>
                                      
                                  </header>
                                  <div class="message-body">
                                      <p>Answer 2 (edited)</p>
  
                                  </div>
                              </div>
                          </div>
                          
                      </details>
                      
                  </div>
              </article>
              
          </div>
      </main>
  
      <aside class="toc">
          <h3>Messages</h3>
          <ol class="toc-list">
              
              <li>
                  <a href="#msg-1">
                      user: Question
                  </a>
              </li>
              
              <li>
                  <a href="#msg-2">
                      assistant: Answer 1
                  </a>
              </li>
              
          </ol>
      </aside>
  </body>
  </html>
  '''
# ---
# name: test_conversation_with_followup_html_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en" data-theme="dark">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Followup After Branch | Polylogue</title>
      <style>
          :root {
              --bg-primary: #0a0a0c;
              --bg-secondary: #16161a;
              --bg-elevated: #1e1e24;
              --bg-code: #282c34;
              --text-primary: #f8f9fa;
              --text-secondary: #94a3b8;
              --text-muted: #6b7280;
              --accent: #6366f1;
              --accent-glow: rgba(99, 102, 241, 0.4);
              --border: #2d2d35;
              --border-subtle: #1f1f23;
              --user-bg: rgba(99, 102, 241, 0.1);
              --user-border: rgba(99, 102, 241, 0.3);
              --assistant-bg: rgba(16, 185, 129, 0.1);
              --assistant-border: rgba(16, 185, 129, 0.3);
              --system-bg: rgba(245, 158, 11, 0.1);
              --system-border: rgba(245, 158, 11, 0.3);
              --tool-bg: rgba(139, 92, 246, 0.1);
              --tool-border: rgba(139, 92, 246, 0.3);
          }
  
          [data-theme="light"] {
              --bg-primary: #ffffff;
              --bg-secondary: #f9fafb;
              --bg-elevated: #ffffff;
              --bg-code: #f6f8fa;
              --text-primary: #111827;
              --text-secondary: #4b5563;
              --text-muted: #9ca3af;
              --border: #e5e7eb;
              --border-subtle: #f3f4f6;
              --user-bg: #e3f2fd;
              --assistant-bg: #f5f5f5;
          }
  
          @media (prefers-color-scheme: light) {
              :root:not([data-theme="dark"]) {
                  --bg-primary: #ffffff;
                  --bg-secondary: #f9fafb;
                  --bg-elevated: #ffffff;
                  --bg-code: #f6f8fa;
                  --text-primary: #111827;
                  --text-secondary: #4b5563;
                  --text-muted: #9ca3af;
                  --border: #e5e7eb;
                  --border-subtle: #f3f4f6;
                  --user-bg: #e3f2fd;
                  --assistant-bg: #f5f5f5;
              }
          }
  
          * { box-sizing: border-box; margin: 0; padding: 0; }
  
          body {
              font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
              background-color: var(--bg-primary);
              color: var(--text-primary);
              line-height: 1.7;
              -webkit-font-smoothing: antialiased;
          }
  
          .nav-header {
              position: sticky;
              top: 0;
              background: var(--bg-secondary);
              border-bottom: 1px solid var(--border);
              padding: 1rem 2rem;
              display: flex;
              align-items: center;
              gap: 1rem;
              z-index: 100;
          }
  
          .nav-back {
              color: var(--accent);
              text-decoration: none;
              font-weight: 500;
          }
  
          .nav-breadcrumb {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .container {
              max-width: 900px;
              margin: 0 auto;
              padding: 2rem;
          }
  
          .conversation-header {
              margin-bottom: 3rem;
              padding-bottom: 2rem;
              border-bottom: 1px solid var(--border);
          }
  
          .conversation-header h1 {
              font-size: 2rem;
              font-weight: 700;
              margin-bottom: 1rem;
              background: linear-gradient(to right, var(--text-primary), var(--text-secondary));
              -webkit-background-clip: text;
              -webkit-text-fill-color: transparent;
          }
  
          .conversation-meta {
              display: flex;
              align-items: center;
              gap: 1rem;
              flex-wrap: wrap;
          }
  
          .badge {
              padding: 0.25rem 0.75rem;
              border-radius: 9999px;
              font-weight: 600;
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              background: var(--bg-elevated);
              border: 1px solid var(--border);
          }
  
          .meta-item {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .messages {
              display: flex;
              flex-direction: column;
              gap: 2rem;
          }
  
          .message {
              display: flex;
              gap: 1rem;
              padding: 1.5rem;
              border-radius: 12px;
              border: 1px solid var(--border-subtle);
              transition: border-color 0.2s;
          }
  
          .message:hover { border-color: var(--border); }
          .message-user { background: var(--user-bg); border-color: var(--user-border); }
          .message-assistant { background: var(--assistant-bg); border-color: var(--assistant-border); }
          .message-system { background: var(--system-bg); border-color: var(--system-border); }
          .message-tool, .message-tool_use, .message-tool_result {
              background: var(--tool-bg);
              border-color: var(--tool-border);
          }
  
          .message-avatar {
              flex-shrink: 0;
          }
  
          .avatar-icon {
              display: flex;
              align-items: center;
              justify-content: center;
              width: 2.5rem;
              height: 2.5rem;
              border-radius: 8px;
              background: var(--bg-elevated);
              font-weight: 700;
              font-size: 0.75rem;
              color: var(--accent);
          }
  
          .message-user .avatar-icon {
              background: var(--accent);
              color: white;
          }
  
          .message-content {
              flex-grow: 1;
              min-width: 0;
          }
  
          .message-header {
              display: flex;
              align-items: center;
              gap: 1rem;
              margin-bottom: 0.5rem;
          }
  
          .role-label {
              font-size: 0.75rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--text-muted);
          }
  
          .timestamp {
              font-size: 0.75rem;
              color: var(--text-muted);
          }
  
          .message-body {
              color: var(--text-primary);
              font-size: 0.95rem;
          }
  
          .message-body p { margin-bottom: 1rem; }
          .message-body p:last-child { margin-bottom: 0; }
  
          .message-body pre {
              background: var(--bg-code);
              border: 1px solid var(--border);
              border-radius: 8px;
              padding: 1rem;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .message-body code {
              font-family: 'JetBrains Mono', 'Fira Code', Consolas, monospace;
              font-size: 0.875em;
          }
  
          .message-body p code {
              background: var(--bg-elevated);
              padding: 0.125rem 0.375rem;
              border-radius: 4px;
          }
  
          /* Pygments highlight overrides */
          .highlight {
              background: var(--bg-code) !important;
              border-radius: 8px;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .highlight pre {
              margin: 0;
              padding: 1rem;
              background: transparent !important;
              border: none;
          }
  
          /* Branch visualization */
          .branches {
              margin-top: 1rem;
              border-left: 3px solid var(--accent);
              padding-left: 1rem;
          }
  
          .branches summary {
              cursor: pointer;
              font-size: 0.8rem;
              font-weight: 600;
              color: var(--accent);
              padding: 0.25rem 0;
              user-select: none;
          }
  
          .branches summary:hover {
              color: var(--text-primary);
          }
  
          .branch-message {
              display: flex;
              gap: 1rem;
              padding: 1rem;
              margin-top: 0.75rem;
              border-radius: 8px;
              border: 1px dashed var(--border);
              opacity: 0.9;
          }
  
          .branch-label {
              font-size: 0.7rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--accent);
              margin-bottom: 0.25rem;
          }
  
          .toc {
              position: fixed;
              right: 2rem;
              top: 6rem;
              width: 200px;
              max-height: calc(100vh - 8rem);
              overflow-y: auto;
              padding: 1rem;
              background: var(--bg-secondary);
              border: 1px solid var(--border);
              border-radius: 8px;
              font-size: 0.75rem;
              display: none;
          }
  
          @media (min-width: 1200px) {
              .toc { display: block; }
          }
  
          .toc h3 {
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.1em;
              color: var(--text-muted);
              margin-bottom: 1rem;
          }
  
          .toc-list {
              list-style: none;
          }
  
          .toc-list li { margin-bottom: 0.5rem; }
  
          .toc-list a {
              color: var(--text-secondary);
              text-decoration: none;
              display: block;
              padding: 0.25rem 0;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
          }
  
          .toc-list a:hover { color: var(--text-primary); }
  
          @media (max-width: 768px) {
              .container { padding: 1rem; }
              .message { flex-direction: column; gap: 0.5rem; }
              .conversation-header h1 { font-size: 1.5rem; }
          }
  
          pre { line-height: 125%; }
  td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  .highlight .hll { background-color: #49483e }
  .highlight { background: #272822; color: #F8F8F2 }
  .highlight .c { color: #959077 } /* Comment */
  .highlight .err { color: #ED007E; background-color: #1E0010 } /* Error */
  .highlight .esc { color: #F8F8F2 } /* Escape */
  .highlight .g { color: #F8F8F2 } /* Generic */
  .highlight .k { color: #66D9EF } /* Keyword */
  .highlight .l { color: #AE81FF } /* Literal */
  .highlight .n { color: #F8F8F2 } /* Name */
  .highlight .o { color: #FF4689 } /* Operator */
  .highlight .x { color: #F8F8F2 } /* Other */
  .highlight .p { color: #F8F8F2 } /* Punctuation */
  .highlight .ch { color: #959077 } /* Comment.Hashbang */
  .highlight .cm { color: #959077 } /* Comment.Multiline */
  .highlight .cp { color: #959077 } /* Comment.Preproc */
  .highlight .cpf { color: #959077 } /* Comment.PreprocFile */
  .highlight .c1 { color: #959077 } /* Comment.Single */
  .highlight .cs { color: #959077 } /* Comment.Special */
  .highlight .gd { color: #FF4689 } /* Generic.Deleted */
  .highlight .ge { color: #F8F8F2; font-style: italic } /* Generic.Emph */
  .highlight .ges { color: #F8F8F2; font-weight: bold; font-style: italic } /* Generic.EmphStrong */
  .highlight .gr { color: #F8F8F2 } /* Generic.Error */
  .highlight .gh { color: #F8F8F2 } /* Generic.Heading */
  .highlight .gi { color: #A6E22E } /* Generic.Inserted */
  .highlight .go { color: #66D9EF } /* Generic.Output */
  .highlight .gp { color: #FF4689; font-weight: bold } /* Generic.Prompt */
  .highlight .gs { color: #F8F8F2; font-weight: bold } /* Generic.Strong */
  .highlight .gu { color: #959077 } /* Generic.Subheading */
  .highlight .gt { color: #F8F8F2 } /* Generic.Traceback */
  .highlight .kc { color: #66D9EF } /* Keyword.Constant */
  .highlight .kd { color: #66D9EF } /* Keyword.Declaration */
  .highlight .kn { color: #FF4689 } /* Keyword.Namespace */
  .highlight .kp { color: #66D9EF } /* Keyword.Pseudo */
  .highlight .kr { color: #66D9EF } /* Keyword.Reserved */
  .highlight .kt { color: #66D9EF } /* Keyword.Type */
  .highlight .ld { color: #E6DB74 } /* Literal.Date */
  .highlight .m { color: #AE81FF } /* Literal.Number */
  .highlight .s { color: #E6DB74 } /* Literal.String */
  .highlight .na { color: #A6E22E } /* Name.Attribute */
  .highlight .nb { color: #F8F8F2 } /* Name.Builtin */
  .highlight .nc { color: #A6E22E } /* Name.Class */
  .highlight .no { color: #66D9EF } /* Name.Constant */
  .highlight .nd { color: #A6E22E } /* Name.Decorator */
  .highlight .ni { color: #F8F8F2 } /* Name.Entity */
  .highlight .ne { color: #A6E22E } /* Name.Exception */
  .highlight .nf { color: #A6E22E } /* Name.Function */
  .highlight .nl { color: #F8F8F2 } /* Name.Label */
  .highlight .nn { color: #F8F8F2 } /* Name.Namespace */
  .highlight .nx { color: #A6E22E } /* Name.Other */
  .highlight .py { color: #F8F8F2 } /* Name.Property */
  .highlight .nt { color: #FF4689 } /* Name.Tag */
  .highlight .nv { color: #F8F8F2 } /* Name.Variable */
  .highlight .ow { color: #FF4689 } /* Operator.Word */
  .highlight .pm { color: #F8F8F2 } /* Punctuation.Marker */
  .highlight .w { color: #F8F8F2 } /* Text.Whitespace */
  .highlight .mb { color: #AE81FF } /* Literal.Number.Bin */
  .highlight .mf { color: #AE81FF } /* Literal.Number.Float */
  .highlight .mh { color: #AE81FF } /* Literal.Number.Hex */
  .highlight .mi { color: #AE81FF } /* Literal.Number.Integer */
  .highlight .mo { color: #AE81FF } /* Literal.Number.Oct */
  .highlight .sa { color: #E6DB74 } /* Literal.String.Affix */
  .highlight .sb { color: #E6DB74 } /* Literal.String.Backtick */
  .highlight .sc { color: #E6DB74 } /* Literal.String.Char */
  .highlight .dl { color: #E6DB74 } /* Literal.String.Delimiter */
  .highlight .sd { color: #E6DB74 } /* Literal.String.Doc */
  .highlight .s2 { color: #E6DB74 } /* Literal.String.Double */
  .highlight .se { color: #AE81FF } /* Literal.String.Escape */
  .highlight .sh { color: #E6DB74 } /* Literal.String.Heredoc */
  .highlight .si { color: #E6DB74 } /* Literal.String.Interpol */
  .highlight .sx { color: #E6DB74 } /* Literal.String.Other */
  .highlight .sr { color: #E6DB74 } /* Literal.String.Regex */
  .highlight .s1 { color: #E6DB74 } /* Literal.String.Single */
  .highlight .ss { color: #E6DB74 } /* Literal.String.Symbol */
  .highlight .bp { color: #F8F8F2 } /* Name.Builtin.Pseudo */
  .highlight .fm { color: #A6E22E } /* Name.Function.Magic */
  .highlight .vc { color: #F8F8F2 } /* Name.Variable.Class */
  .highlight .vg { color: #F8F8F2 } /* Name.Variable.Global */
  .highlight .vi { color: #F8F8F2 } /* Name.Variable.Instance */
  .highlight .vm { color: #F8F8F2 } /* Name.Variable.Magic */
  .highlight .il { color: #AE81FF } /* Literal.Number.Integer.Long */
      </style>
  </head>
  <body>
      <nav class="nav-header">
          <a href="../index.html" class="nav-back">← Back</a>
          <span class="nav-breadcrumb">chatgpt / snap-conv-01...</span>
      </nav>
  
      <main class="container">
          <header class="conversation-header">
              <h1>Followup After Branch</h1>
              <div class="conversation-meta">
                  <span class="badge">chatgpt</span>
                  <span class="meta-item">3 messages</span>
                  
              </div>
          </header>
  
          <div class="messages">
              
              <article class="message message-user" id="msg-1">
                  <div class="message-avatar">
                      <span class="avatar-icon">US</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">user</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Q</p>
  
                      </div>
                      
                  </div>
              </article>
              
              <article class="message message-assistant" id="msg-2">
                  <div class="message-avatar">
                      <span class="avatar-icon">AS</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">assistant</span>
                          
                      </header>
                      <div class="message-body">
                          <p>A1</p>
  
                      </div>
                      
                      <details class="branches">
                          <summary>1 alternative</summary>
                          
                          <div class="branch-message message-assistant">
                              <div class="message-content">
                                  <div class="branch-label">Branch 1</div>
                                  <header class="message-header">
                                      <span class="role-label">assistant</span>
                                      
                                  </header>
                                  <div class="message-body">
                                      <p>A2 alt</p>
  
                                  </div>
                              </div>
                          </div>
                          
                      </details>
                      
                  </div>
              </article>
              
              <article class="message message-user" id="msg-3">
                  <div class="message-avatar">
                      <span class="avatar-icon">US</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">user</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Follow-up</p>
  
                      </div>
                      
                  </div>
              </article>
              
          </div>
      </main>
  
      <aside class="toc">
          <h3>Messages</h3>
          <ol class="toc-list">
              
              <li>
                  <a href="#msg-1">
                      user: Q
                  </a>
              </li>
              
              <li>
                  <a href="#msg-2">
                      assistant: A1
                  </a>
              </li>
              
              <li>
                  <a href="#msg-3">
                      user: Follow-up
                  </a>
              </li>
              
          </ol>
      </aside>
  </body>
  </html>
  '''
# ---
# name: test_linear_conversation_html_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en" data-theme="dark">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Linear Conversation | Polylogue</title>
      <style>
          :root {
              --bg-primary: #0a0a0c;
              --bg-secondary: #16161a;
              --bg-elevated: #1e1e24;
              --bg-code: #282c34;
              --text-primary: #f8f9fa;
              --text-secondary: #94a3b8;
              --text-muted: #6b7280;
              --accent: #6366f1;
              --accent-glow: rgba(99, 102, 241, 0.4);
              --border: #2d2d35;
              --border-subtle: #1f1f23;
              --user-bg: rgba(99, 102, 241, 0.1);
              --user-border: rgba(99, 102, 241, 0.3);
              --assistant-bg: rgba(16, 185, 129, 0.1);
              --assistant-border: rgba(16, 185, 129, 0.3);
              --system-bg: rgba(245, 158, 11, 0.1);
              --system-border: rgba(245, 158, 11, 0.3);
              --tool-bg: rgba(139, 92, 246, 0.1);
              --tool-border: rgba(139, 92, 246, 0.3);
          }
  
          [data-theme="light"] {
              --bg-primary: #ffffff;
              --bg-secondary: #f9fafb;
              --bg-elevated: #ffffff;
              --bg-code: #f6f8fa;
              --text-primary: #111827;
              --text-secondary: #4b5563;
              --text-muted: #9ca3af;
              --border: #e5e7eb;
              --border-subtle: #f3f4f6;
              --user-bg: #e3f2fd;
              --assistant-bg: #f5f5f5;
          }
  
          @media (prefers-color-scheme: light) {
              :root:not([data-theme="dark"]) {
                  --bg-primary: #ffffff;
                  --bg-secondary: #f9fafb;
                  --bg-elevated: #ffffff;
                  --bg-code: #f6f8fa;
                  --text-primary: #111827;
                  --text-secondary: #4b5563;
                  --text-muted: #9ca3af;
                  --border: #e5e7eb;
                  --border-subtle: #f3f4f6;
                  --user-bg: #e3f2fd;
                  --assistant-bg: #f5f5f5;
              }
          }
  
          * { box-sizing: border-box; margin: 0; padding: 0; }
  
          body {
              font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
              background-color: var(--bg-primary);
              color: var(--text-primary);
              line-height: 1.7;
              -webkit-font-smoothing: antialiased;
          }
  
          .nav-header {
              position: sticky;
              top: 0;
              background: var(--bg-secondary);
              border-bottom: 1px solid var(--border);
              padding: 1rem 2rem;
              display: flex;
              align-items: center;
              gap: 1rem;
              z-index: 100;
          }
  
          .nav-back {
              color: var(--accent);
              text-decoration: none;
              font-weight: 500;
          }
  
          .nav-breadcrumb {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .container {
              max-width: 900px;
              margin: 0 auto;
              padding: 2rem;
          }
  
          .conversation-header {
              margin-bottom: 3rem;
              padding-bottom: 2rem;
              border-bottom: 1px solid var(--border);
          }
  
          .conversation-header h1 {
              font-size: 2rem;
              font-weight: 700;
              margin-bottom: 1rem;
              background: linear-gradient(to right, var(--text-primary), var(--text-secondary));
              -webkit-background-clip: text;
              -webkit-text-fill-color: transparent;
          }
  
          .conversation-meta {
              display: flex;
              align-items: center;
              gap: 1rem;
              flex-wrap: wrap;
          }
  
          .badge {
              padding: 0.25rem 0.75rem;
              border-radius: 9999px;
              font-weight: 600;
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              background: var(--bg-elevated);
              border: 1px solid var(--border);
          }
  
          .meta-item {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .messages {
              display: flex;
              flex-direction: column;
              gap: 2rem;
          }
  
          .message {
              display: flex;
              gap: 1rem;
              padding: 1.5rem;
              border-radius: 12px;
              border: 1px solid var(--border-subtle);
              transition: border-color 0.2s;
          }
  
          .message:hover { border-color: var(--border); }
          .message-user { background: var(--user-bg); border-color: var(--user-border); }
          .message-assistant { background: var(--assistant-bg); border-color: var(--assistant-border); }
          .message-system { background: var(--system-bg); border-color: var(--system-border); }
          .message-tool, .message-tool_use, .message-tool_result {
              background: var(--tool-bg);
              border-color: var(--tool-border);
          }
  
          .message-avatar {
              flex-shrink: 0;
          }
  
          .avatar-icon {
              display: flex;
              align-items: center;
              justify-content: center;
              width: 2.5rem;
              height: 2.5rem;
              border-radius: 8px;
              background: var(--bg-elevated);
              font-weight: 700;
              font-size: 0.75rem;
              color: var(--accent);
          }
  
          .message-user .avatar-icon {
              background: var(--accent);
              color: white;
          }
  
          .message-content {
              flex-grow: 1;
              min-width: 0;
          }
  
          .message-header {
              display: flex;
              align-items: center;
              gap: 1rem;
              margin-bottom: 0.5rem;
          }
  
          .role-label {
              font-size: 0.75rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--text-muted);
          }
  
          .timestamp {
              font-size: 0.75rem;
              color: var(--text-muted);
          }
  
          .message-body {
              color: var(--text-primary);
              font-size: 0.95rem;
          }
  
          .message-body p { margin-bottom: 1rem; }
          .message-body p:last-child { margin-bottom: 0; }
  
          .message-body pre {
              background: var(--bg-code);
              border: 1px solid var(--border);
              border-radius: 8px;
              padding: 1rem;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .message-body code {
              font-family: 'JetBrains Mono', 'Fira Code', Consolas, monospace;
              font-size: 0.875em;
          }
  
          .message-body p code {
              background: var(--bg-elevated);
              padding: 0.125rem 0.375rem;
              border-radius: 4px;
          }
  
          /* Pygments highlight overrides */
          .highlight {
              background: var(--bg-code) !important;
              border-radius: 8px;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .highlight pre {
              margin: 0;
              padding: 1rem;
              background: transparent !important;
              border: none;
          }
  
          /* Branch visualization */
          .branches {
              margin-top: 1rem;
              border-left: 3px solid var(--accent);
              padding-left: 1rem;
          }
  
          .branches summary {
              cursor: pointer;
              font-size: 0.8rem;
              font-weight: 600;
              color: var(--accent);
              padding: 0.25rem 0;
              user-select: none;
          }
  
          .branches summary:hover {
              color: var(--text-primary);
          }
  
          .branch-message {
              display: flex;
              gap: 1rem;
              padding: 1rem;
              margin-top: 0.75rem;
              border-radius: 8px;
              border: 1px dashed var(--border);
              opacity: 0.9;
          }
  
          .branch-label {
              font-size: 0.7rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--accent);
              margin-bottom: 0.25rem;
          }
  
          .toc {
              position: fixed;
              right: 2rem;
              top: 6rem;
              width: 200px;
              max-height: calc(100vh - 8rem);
              overflow-y: auto;
              padding: 1rem;
              background: var(--bg-secondary);
              border: 1px solid var(--border);
              border-radius: 8px;
              font-size: 0.75rem;
              display: none;
          }
  
          @media (min-width: 1200px) {
              .toc { display: block; }
          }
  
          .toc h3 {
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.1em;
              color: var(--text-muted);
              margin-bottom: 1rem;
          }
  
          .toc-list {
              list-style: none;
          }
  
          .toc-list li { margin-bottom: 0.5rem; }
  
          .toc-list a {
              color: var(--text-secondary);
              text-decoration: none;
              display: block;
              padding: 0.25rem 0;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
          }
  
          .toc-list a:hover { color: var(--text-primary); }
  
          @media (max-width: 768px) {
              .container { padding: 1rem; }
              .message { flex-direction: column; gap: 0.5rem; }
              .conversation-header h1 { font-size: 1.5rem; }
          }
  
          pre { line-height: 125%; }
  td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  .highlight .hll { background-color: #49483e }
  .highlight { background: #272822; color: #F8F8F2 }
  .highlight .c { color: #959077 } /* Comment */
  .highlight .err { color: #ED007E; background-color: #1E0010 } /* Error */
  .highlight .esc { color: #F8F8F2 } /* Escape */
  .highlight .g { color: #F8F8F2 } /* Generic */
  .highlight .k { color: #66D9EF } /* Keyword */
  .highlight .l { color: #AE81FF } /* Literal */
  .highlight .n { color: #F8F8F2 } /* Name */
  .highlight .o { color: #FF4689 } /* Operator */
  .highlight .x { color: #F8F8F2 } /* Other */
  .highlight .p { color: #F8F8F2 } /* Punctuation */
  .highlight .ch { color: #959077 } /* Comment.Hashbang */
  .highlight .cm { color: #959077 } /* Comment.Multiline */
  .highlight .cp { color: #959077 } /* Comment.Preproc */
  .highlight .cpf { color: #959077 } /* Comment.PreprocFile */
  .highlight .c1 { color: #959077 } /* Comment.Single */
  .highlight .cs { color: #959077 } /* Comment.Special */
  .highlight .gd { color: #FF4689 } /* Generic.Deleted */
  .highlight .ge { color: #F8F8F2; font-style: italic } /* Generic.Emph */
  .highlight .ges { color: #F8F8F2; font-weight: bold; font-style: italic } /* Generic.EmphStrong */
  .highlight .gr { color: #F8F8F2 } /* Generic.Error */
  .highlight .gh { color: #F8F8F2 } /* Generic.Heading */
  .highlight .gi { color: #A6E22E } /* Generic.Inserted */
  .highlight .go { color: #66D9EF } /* Generic.Output */
  .highlight .gp { color: #FF4689; font-weight: bold } /* Generic.Prompt */
  .highlight .gs { color: #F8F8F2; font-weight: bold } /* Generic.Strong */
  .highlight .gu { color: #959077 } /* Generic.Subheading */
  .highlight .gt { color: #F8F8F2 } /* Generic.Traceback */
  .highlight .kc { color: #66D9EF } /* Keyword.Constant */
  .highlight .kd { color: #66D9EF } /* Keyword.Declaration */
  .highlight .kn { color: #FF4689 } /* Keyword.Namespace */
  .highlight .kp { color: #66D9EF } /* Keyword.Pseudo */
  .highlight .kr { color: #66D9EF } /* Keyword.Reserved */
  .highlight .kt { color: #66D9EF } /* Keyword.Type */
  .highlight .ld { color: #E6DB74 } /* Literal.Date */
  .highlight .m { color: #AE81FF } /* Literal.Number */
  .highlight .s { color: #E6DB74 } /* Literal.String */
  .highlight .na { color: #A6E22E } /* Name.Attribute */
  .highlight .nb { color: #F8F8F2 } /* Name.Builtin */
  .highlight .nc { color: #A6E22E } /* Name.Class */
  .highlight .no { color: #66D9EF } /* Name.Constant */
  .highlight .nd { color: #A6E22E } /* Name.Decorator */
  .highlight .ni { color: #F8F8F2 } /* Name.Entity */
  .highlight .ne { color: #A6E22E } /* Name.Exception */
  .highlight .nf { color: #A6E22E } /* Name.Function */
  .highlight .nl { color: #F8F8F2 } /* Name.Label */
  .highlight .nn { color: #F8F8F2 } /* Name.Namespace */
  .highlight .nx { color: #A6E22E } /* Name.Other */
  .highlight .py { color: #F8F8F2 } /* Name.Property */
  .highlight .nt { color: #FF4689 } /* Name.Tag */
  .highlight .nv { color: #F8F8F2 } /* Name.Variable */
  .highlight .ow { color: #FF4689 } /* Operator.Word */
  .highlight .pm { color: #F8F8F2 } /* Punctuation.Marker */
  .highlight .w { color: #F8F8F2 } /* Text.Whitespace */
  .highlight .mb { color: #AE81FF } /* Literal.Number.Bin */
  .highlight .mf { color: #AE81FF } /* Literal.Number.Float */
  .highlight .mh { color: #AE81FF } /* Literal.Number.Hex */
  .highlight .mi { color: #AE81FF } /* Literal.Number.Integer */
  .highlight .mo { color: #AE81FF } /* Literal.Number.Oct */
  .highlight .sa { color: #E6DB74 } /* Literal.String.Affix */
  .highlight .sb { color: #E6DB74 } /* Literal.String.Backtick */
  .highlight .sc { color: #E6DB74 } /* Literal.String.Char */
  .highlight .dl { color: #E6DB74 } /* Literal.String.Delimiter */
  .highlight .sd { color: #E6DB74 } /* Literal.String.Doc */
  .highlight .s2 { color: #E6DB74 } /* Literal.String.Double */
  .highlight .se { color: #AE81FF } /* Literal.String.Escape */
  .highlight .sh { color: #E6DB74 } /* Literal.String.Heredoc */
  .highlight .si { color: #E6DB74 } /* Literal.String.Interpol */
  .highlight .sx { color: #E6DB74 } /* Literal.String.Other */
  .highlight .sr { color: #E6DB74 } /* Literal.String.Regex */
  .highlight .s1 { color: #E6DB74 } /* Literal.String.Single */
  .highlight .ss { color: #E6DB74 } /* Literal.String.Symbol */
  .highlight .bp { color: #F8F8F2 } /* Name.Builtin.Pseudo */
  .highlight .fm { color: #A6E22E } /* Name.Function.Magic */
  .highlight .vc { color: #F8F8F2 } /* Name.Variable.Class */
  .highlight .vg { color: #F8F8F2 } /* Name.Variable.Global */
  .highlight .vi { color: #F8F8F2 } /* Name.Variable.Instance */
  .highlight .vm { color: #F8F8F2 } /* Name.Variable.Magic */
  .highlight .il { color: #AE81FF } /* Literal.Number.Integer.Long */
      </style>
  </head>
  <body>
      <nav class="nav-header">
          <a href="../index.html" class="nav-back">← Back</a>
          <span class="nav-breadcrumb">chatgpt / snap-conv-01...</span>
      </nav>
  
      <main class="container">
          <header class="conversation-header">
              <h1>Linear Conversation</h1>
              <div class="conversation-meta">
                  <span class="badge">chatgpt</span>
                  <span class="meta-item">2 messages</span>
                  
              </div>
          </header>
  
          <div class="messages">
              
              <article class="message message-user" id="msg-1">
                  <div class="message-avatar">
                      <span class="avatar-icon">US</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">user</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Hello there</p>
  
                      </div>
                      
                  </div>
              </article>
              
              <article class="message message-assistant" id="msg-2">
                  <div class="message-avatar">
                      <span class="avatar-icon">AS</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">assistant</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Hi!</p>
  
                      </div>
                      
                  </div>
              </article>
              
          </div>
      </main>
  
      <aside class="toc">
          <h3>Messages</h3>
          <ol class="toc-list">
              
              <li>
                  <a href="#msg-1">
                      user: Hello there
                  </a>
              </li>
              
              <li>
                  <a href="#msg-2">
                      assistant: Hi!
                  </a>
              </li>
              
          </ol>
      </aside>
  </body>
  </html>
  '''
# ---
# name: test_multi_branch_conversation_html_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en" data-theme="dark">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Multi-Branch Conversation | Polylogue</title>
      <style>
          :root {
              --bg-primary: #0a0a0c;
              --bg-secondary: #16161a;
              --bg-elevated: #1e1e24;
              --bg-code: #282c34;
              --text-primary: #f8f9fa;
              --text-secondary: #94a3b8;
              --text-muted: #6b7280;
              --accent: #6366f1;
              --accent-glow: rgba(99, 102, 241, 0.4);
              --border: #2d2d35;
              --border-subtle: #1f1f23;
              --user-bg: rgba(99, 102, 241, 0.1);
              --user-border: rgba(99, 102, 241, 0.3);
              --assistant-bg: rgba(16, 185, 129, 0.1);
              --assistant-border: rgba(16, 185, 129, 0.3);
              --system-bg: rgba(245, 158, 11, 0.1);
              --system-border: rgba(245, 158, 11, 0.3);
              --tool-bg: rgba(139, 92, 246, 0.1);
              --tool-border: rgba(139, 92, 246, 0.3);
          }
  
          [data-theme="light"] {
              --bg-primary: #ffffff;
              --bg-secondary: #f9fafb;
              --bg-elevated: #ffffff;
              --bg-code: #f6f8fa;
              --text-primary: #111827;
              --text-secondary: #4b5563;
              --text-muted: #9ca3af;
              --border: #e5e7eb;
              --border-subtle: #f3f4f6;
              --user-bg: #e3f2fd;
              --assistant-bg: #f5f5f5;
          }
  
          @media (prefers-color-scheme: light) {
              :root:not([data-theme="dark"]) {
                  --bg-primary: #ffffff;
                  --bg-secondary: #f9fafb;
                  --bg-elevated: #ffffff;
                  --bg-code: #f6f8fa;
                  --text-primary: #111827;
                  --text-secondary: #4b5563;
                  --text-muted: #9ca3af;
                  --border: #e5e7eb;
                  --border-subtle: #f3f4f6;
                  --user-bg: #e3f2fd;
                  --assistant-bg: #f5f5f5;
              }
          }
  
          * { box-sizing: border-box; margin: 0; padding: 0; }
  
          body {
              font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
              background-color: var(--bg-primary);
              color: var(--text-primary);
              line-height: 1.7;
              -webkit-font-smoothing: antialiased;
          }
  
          .nav-header {
              position: sticky;
              top: 0;
              background: var(--bg-secondary);
              border-bottom: 1px solid var(--border);
              padding: 1rem 2rem;
              display: flex;
              align-items: center;
              gap: 1rem;
              z-index: 100;
          }
  
          .nav-back {
              color: var(--accent);
              text-decoration: none;
              font-weight: 500;
          }
  
          .nav-breadcrumb {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .container {
              max-width: 900px;
              margin: 0 auto;
              padding: 2rem;
          }
  
          .conversation-header {
              margin-bottom: 3rem;
              padding-bottom: 2rem;
              border-bottom: 1px solid var(--border);
          }
  
          .conversation-header h1 {
              font-size: 2rem;
              font-weight: 700;
              margin-bottom: 1rem;
              background: linear-gradient(to right, var(--text-primary), var(--text-secondary));
              -webkit-background-clip: text;
              -webkit-text-fill-color: transparent;
          }
  
          .conversation-meta {
              display: flex;
              align-items: center;
              gap: 1rem;
              flex-wrap: wrap;
          }
  
          .badge {
              padding: 0.25rem 0.75rem;
              border-radius: 9999px;
              font-weight: 600;
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              background: var(--bg-elevated);
              border: 1px solid var(--border);
          }
  
          .meta-item {
              color: var(--text-muted);
              font-size: 0.875rem;
          }
  
          .messages {
              display: flex;
              flex-direction: column;
              gap: 2rem;
          }
  
          .message {
              display: flex;
              gap: 1rem;
              padding: 1.5rem;
              border-radius: 12px;
              border: 1px solid var(--border-subtle);
              transition: border-color 0.2s;
          }
  
          .message:hover { border-color: var(--border); }
          .message-user { background: var(--user-bg); border-color: var(--user-border); }
          .message-assistant { background: var(--assistant-bg); border-color: var(--assistant-border); }
          .message-system { background: var(--system-bg); border-color: var(--system-border); }
          .message-tool, .message-tool_use, .message-tool_result {
              background: var(--tool-bg);
              border-color: var(--tool-border);
          }
  
          .message-avatar {
              flex-shrink: 0;
          }
  
          .avatar-icon {
              display: flex;
              align-items: center;
              justify-content: center;
              width: 2.5rem;
              height: 2.5rem;
              border-radius: 8px;
              background: var(--bg-elevated);
              font-weight: 700;
              font-size: 0.75rem;
              color: var(--accent);
          }
  
          .message-user .avatar-icon {
              background: var(--accent);
              color: white;
          }
  
          .message-content {
              flex-grow: 1;
              min-width: 0;
          }
  
          .message-header {
              display: flex;
              align-items: center;
              gap: 1rem;
              margin-bottom: 0.5rem;
          }
  
          .role-label {
              font-size: 0.75rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--text-muted);
          }
  
          .timestamp {
              font-size: 0.75rem;
              color: var(--text-muted);
          }
  
          .message-body {
              color: var(--text-primary);
              font-size: 0.95rem;
          }
  
          .message-body p { margin-bottom: 1rem; }
          .message-body p:last-child { margin-bottom: 0; }
  
          .message-body pre {
              background: var(--bg-code);
              border: 1px solid var(--border);
              border-radius: 8px;
              padding: 1rem;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .message-body code {
              font-family: 'JetBrains Mono', 'Fira Code', Consolas, monospace;
              font-size: 0.875em;
          }
  
          .message-body p code {
              background: var(--bg-elevated);
              padding: 0.125rem 0.375rem;
              border-radius: 4px;
          }
  
          /* Pygments highlight overrides */
          .highlight {
              background: var(--bg-code) !important;
              border-radius: 8px;
              overflow-x: auto;
              margin: 1rem 0;
          }
  
          .highlight pre {
              margin: 0;
              padding: 1rem;
              background: transparent !important;
              border: none;
          }
  
          /* Branch visualization */
          .branches {
              margin-top: 1rem;
              border-left: 3px solid var(--accent);
              padding-left: 1rem;
          }
  
          .branches summary {
              cursor: pointer;
              font-size: 0.8rem;
              font-weight: 600;
              color: var(--accent);
              padding: 0.25rem 0;
              user-select: none;
          }
  
          .branches summary:hover {
              color: var(--text-primary);
          }
  
          .branch-message {
              display: flex;
              gap: 1rem;
              padding: 1rem;
              margin-top: 0.75rem;
              border-radius: 8px;
              border: 1px dashed var(--border);
              opacity: 0.9;
          }
  
          .branch-label {
              font-size: 0.7rem;
              font-weight: 600;
              text-transform: uppercase;
              letter-spacing: 0.05em;
              color: var(--accent);
              margin-bottom: 0.25rem;
          }
  
          .toc {
              position: fixed;
              right: 2rem;
              top: 6rem;
              width: 200px;
              max-height: calc(100vh - 8rem);
              overflow-y: auto;
              padding: 1rem;
              background: var(--bg-secondary);
              border: 1px solid var(--border);
              border-radius: 8px;
              font-size: 0.75rem;
              display: none;
          }
  
          @media (min-width: 1200px) {
              .toc { display: block; }
          }
  
          .toc h3 {
              font-size: 0.75rem;
              text-transform: uppercase;
              letter-spacing: 0.1em;
              color: var(--text-muted);
              margin-bottom: 1rem;
          }
  
          .toc-list {
              list-style: none;
          }
  
          .toc-list li { margin-bottom: 0.5rem; }
  
          .toc-list a {
              color: var(--text-secondary);
              text-decoration: none;
              display: block;
              padding: 0.25rem 0;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
          }
  
          .toc-list a:hover { color: var(--text-primary); }
  
          @media (max-width: 768px) {
              .container { padding: 1rem; }
              .message { flex-direction: column; gap: 0.5rem; }
              .conversation-header h1 { font-size: 1.5rem; }
          }
  
          pre { line-height: 125%; }
  td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
  td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
  .highlight .hll { background-color: #49483e }
  .highlight { background: #272822; color: #F8F8F2 }
  .highlight .c { color: #959077 } /* Comment */
  .highlight .err { color: #ED007E; background-color: #1E0010 } /* Error */
  .highlight .esc { color: #F8F8F2 } /* Escape */
  .highlight .g { color: #F8F8F2 } /* Generic */
  .highlight .k { color: #66D9EF } /* Keyword */
  .highlight .l { color: #AE81FF } /* Literal */
  .highlight .n { color: #F8F8F2 } /* Name */
  .highlight .o { color: #FF4689 } /* Operator */
  .highlight .x { color: #F8F8F2 } /* Other */
  .highlight .p { color: #F8F8F2 } /* Punctuation */
  .highlight .ch { color: #959077 } /* Comment.Hashbang */
  .highlight .cm { color: #959077 } /* Comment.Multiline */
  .highlight .cp { color: #959077 } /* Comment.Preproc */
  .highlight .cpf { color: #959077 } /* Comment.PreprocFile */
  .highlight .c1 { color: #959077 } /* Comment.Single */
  .highlight .cs { color: #959077 } /* Comment.Special */
  .highlight .gd { color: #FF4689 } /* Generic.Deleted */
  .highlight .ge { color: #F8F8F2; font-style: italic } /* Generic.Emph */
  .highlight .ges { color: #F8F8F2; font-weight: bold; font-style: italic } /* Generic.EmphStrong */
  .highlight .gr { color: #F8F8F2 } /* Generic.Error */
  .highlight .gh { color: #F8F8F2 } /* Generic.Heading */
  .highlight .gi { color: #A6E22E } /* Generic.Inserted */
  .highlight .go { color: #66D9EF } /* Generic.Output */
  .highlight .gp { color: #FF4689; font-weight: bold } /* Generic.Prompt */
  .highlight .gs { color: #F8F8F2; font-weight: bold } /* Generic.Strong */
  .highlight .gu { color: #959077 } /* Generic.Subheading */
  .highlight .gt { color: #F8F8F2 } /* Generic.Traceback */
  .highlight .kc { color: #66D9EF } /* Keyword.Constant */
  .highlight .kd { color: #66D9EF } /* Keyword.Declaration */
  .highlight .kn { color: #FF4689 } /* Keyword.Namespace */
  .highlight .kp { color: #66D9EF } /* Keyword.Pseudo */
  .highlight .kr { color: #66D9EF } /* Keyword.Reserved */
  .highlight .kt { color: #66D9EF } /* Keyword.Type */
  .highlight .ld { color: #E6DB74 } /* Literal.Date */
  .highlight .m { color: #AE81FF } /* Literal.Number */
  .highlight .s { color: #E6DB74 } /* Literal.String */
  .highlight .na { color: #A6E22E } /* Name.Attribute */
  .highlight .nb { color: #F8F8F2 } /* Name.Builtin */
  .highlight .nc { color: #A6E22E } /* Name.Class */
  .highlight .no { color: #66D9EF } /* Name.Constant */
  .highlight .nd { color: #A6E22E } /* Name.Decorator */
  .highlight .ni { color: #F8F8F2 } /* Name.Entity */
  .highlight .ne { color: #A6E22E } /* Name.Exception */
  .highlight .nf { color: #A6E22E } /* Name.Function */
  .highlight .nl { color: #F8F8F2 } /* Name.Label */
  .highlight .nn { color: #F8F8F2 } /* Name.Namespace */
  .highlight .nx { color: #A6E22E } /* Name.Other */
  .highlight .py { color: #F8F8F2 } /* Name.Property */
  .highlight .nt { color: #FF4689 } /* Name.Tag */
  .highlight .nv { color: #F8F8F2 } /* Name.Variable */
  .highlight .ow { color: #FF4689 } /* Operator.Word */
  .highlight .pm { color: #F8F8F2 } /* Punctuation.Marker */
  .highlight .w { color: #F8F8F2 } /* Text.Whitespace */
  .highlight .mb { color: #AE81FF } /* Literal.Number.Bin */
  .highlight .mf { color: #AE81FF } /* Literal.Number.Float */
  .highlight .mh { color: #AE81FF } /* Literal.Number.Hex */
  .highlight .mi { color: #AE81FF } /* Literal.Number.Integer */
  .highlight .mo { color: #AE81FF } /* Literal.Number.Oct */
  .highlight .sa { color: #E6DB74 } /* Literal.String.Affix */
  .highlight .sb { color: #E6DB74 } /* Literal.String.Backtick */
  .highlight .sc { color: #E6DB74 } /* Literal.String.Char */
  .highlight .dl { color: #E6DB74 } /* Literal.String.Delimiter */
  .highlight .sd { color: #E6DB74 } /* Literal.String.Doc */
  .highlight .s2 { color: #E6DB74 } /* Literal.String.Double */
  .highlight .se { color: #AE81FF } /* Literal.String.Escape */
  .highlight .sh { color: #E6DB74 } /* Literal.String.Heredoc */
  .highlight .si { color: #E6DB74 } /* Literal.String.Interpol */
  .highlight .sx { color: #E6DB74 } /* Literal.String.Other */
  .highlight .sr { color: #E6DB74 } /* Literal.String.Regex */
  .highlight .s1 { color: #E6DB74 } /* Literal.String.Single */
  .highlight .ss { color: #E6DB74 } /* Literal.String.Symbol */
  .highlight .bp { color: #F8F8F2 } /* Name.Builtin.Pseudo */
  .highlight .fm { color: #A6E22E } /* Name.Function.Magic */
  .highlight .vc { color: #F8F8F2 } /* Name.Variable.Class */
  .highlight .vg { color: #F8F8F2 } /* Name.Variable.Global */
  .highlight .vi { color: #F8F8F2 } /* Name.Variable.Instance */
  .highlight .vm { color: #F8F8F2 } /* Name.Variable.Magic */
  .highlight .il { color: #AE81FF } /* Literal.Number.Integer.Long */
      </style>
  </head>
  <body>
      <nav class="nav-header">
          <a href="../index.html" class="nav-back">← Back</a>
          <span class="nav-breadcrumb">chatgpt / snap-conv-01...</span>
      </nav>
  
      <main class="container">
          <header class="conversation-header">
              <h1>Multi-Branch Conversation</h1>
              <div class="conversation-meta">
                  <span class="badge">chatgpt</span>
                  <span class="meta-item">2 messages</span>
                  
              </div>
          </header>
  
          <div class="messages">
              
              <article class="message message-user" id="msg-1">
                  <div class="message-avatar">
                      <span class="avatar-icon">US</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">user</span>
                          
                      </header>
                      <div class="message-body">
                          <p>Question</p>
  
                      </div>
                      
                  </div>
              </article>
              
              <article class="message message-assistant" id="msg-2">
                  <div class="message-avatar">
                      <span class="avatar-icon">AS</span>
                  </div>
                  <div class="message-content">
                      <header class="message-header">
                          <span class="role-label">assistant</span>
                          
                      </header>
                      <div class="message-body">
                          <p>A1</p>
  
                      </div>
                      
                      <details class="branches">
                          <summary>2 alternatives</summary>
                          
                          <div class="branch-message message-assistant">
                              <div class="message-content">
                                  <div class="branch-label">Branch 1</div>
                                  <header class="message-header">
                                      <span class="role-label">assistant</span>
                                      
                                  </header>
                                  <div class="message-body">
                                      <p>A2</p>
  
                                  </div>
                              </div>
                          </div>
                          
                          <div class="branch-message message-assistant">
                              <div class="message-content">
                                  <div class="branch-label">Branch 2</div>
                                  <header class="message-header">
                                      <span class="role-label">assistant</span>
                                      
                                  </header>
                                  <div class="message-body">
                                      <p>A3</p>
  
                                  </div>
                              </div>
                          </div>
                          
                      </details>
                      
                  </div>
              </article>
              
          </div>
      </main>
  
      <aside class="toc">
          <h3>Messages</h3>
          <ol class="toc-list">
              
              <li>
                  <a href="#msg-1">
                      user: Question
                  </a>
              </li>
              
              <li>
                  <a href="#msg-2">
                      assistant: A1
                  </a>
              </li>
              
          </ol>
      </aside>
  </body>
  </html>
  '''
# ---
